--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@atomico/scaffold",
   "description": "markdown document-based file generation system",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "publishConfig": {
     "access": "public"
@@ -46,7 +46,7 @@
     ]
   },
   "bin": {
-    "scaffold": "./src/cli.cjs",
-    "scaff": "./src/cli.cjs"
+    "scaffold": "./src/cli.js",
+    "scaff": "./src/cli.js"
   }
 }
